<?xml version="3.0"?>
<package format="3">
  <name>turtlebot_explorer</name>
  <version>0.0.0</version>
  <description>Simple TurtleBot explorer example using a random walk.</description>
  <maintainer email="user@example.com">Example Maintainer</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
